Bug 56920 - [sandybridge][uxa] graphics very glitchy and always flickering
Summary: [sandybridge][uxa] graphics very glitchy and always flickering
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: 9.0
Hardware: x86-64 (AMD64) Linux (All)
: highest critical
Assignee: Ian Romanick
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-09 13:52 UTC by Pad
Modified: 2013-02-22 22:23 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Colliding models in Portal 2 Wine (117.30 KB, image/jpeg)
2012-11-09 13:53 UTC, Pad
Details
Flickering and strange behaviour in graphics of Portal 2 Wine (532.09 KB, image/jpeg)
2012-11-09 13:53 UTC, Pad
Details
Strange artifacts in World of Goo native binaries from Steam Linux (447.21 KB, image/jpeg)
2012-11-09 13:54 UTC, Pad
Details
Glitchy effects on the buttons of Steam Linux Big Picture (387.18 KB, image/jpeg)
2012-11-09 13:55 UTC, Pad
Details
A much smaller (trimmed) trace of the steam big picture issue (67.08 KB, application/octet-stream)
2013-01-29 21:15 UTC, Jordan Justen
Details

Description Pad 2012-11-09 13:52:28 UTC
My system:

- Archlinux x64 (stable repositories);
- Sandybridge with Intel HD3000;
- NVidia GT540M running with Bumblebee;

Packages versions:
- xorg-server 1.13.0-3
- xf86-video-intel 2.20.12-1
- mesa 9.0-1
- libdrm 2.4.39-1

I never played games in Linux using the Intel graphics card, or I either play in Windows or I either use Bumblebee, but recently I tried to run my games on Linux using the Intel's card and the results are very weird, the graphics are always glitchy and are always flickering in whatever game I'm playing.

I tried Portal 2 through Wine and I took a couple of screenshots:
http://i.imgur.com/Kfb50.jpg
http://i.imgur.com/akJVl.png
In the first screenshot, the 3D models of the game collide and trespass into each other and in the second one they start to flick.
I tried Team Fortress 2 through Wine and the results are similar to this ones.

I also tried World of Goo (native binaries through the new Steam for Linux). At first everything seemed smooth and clear but when I returned to the main menu I only saw this:
http://i.imgur.com/BPuMQ.png
With Amnesia Dark Descent (Steam for Linux) everything seemed fine at first too, but when I advanced though the game, the graphics started to glitch like in the World of Goo.

When I tried to run Steam Linux Big Picture, the fancy effects of the buttons are also glitchy:
http://i.imgur.com/PQNw0.png

But if I use the NVidia card, with the optirun command, everything runs as it should be.

I use Archlinux + KDE 4.9 with the effects on and I never noticed anything out of ordinary. My system is fully updated and I'm also not using the SNA acceleration or the RC6 trick in the kernel line, I'm using the default UXA accelaration.

What could the problem be? Is it fixable?
Comment 1 Pad 2012-11-09 13:53:18 UTC
Created attachment 69810 [details]
Colliding models in Portal 2 Wine
Comment 2 Pad 2012-11-09 13:53:56 UTC
Created attachment 69811 [details]
Flickering and strange behaviour in graphics of Portal 2 Wine
Comment 3 Pad 2012-11-09 13:54:33 UTC
Created attachment 69812 [details]
Strange artifacts in World of Goo native binaries from Steam Linux
Comment 4 Pad 2012-11-09 13:55:30 UTC
Created attachment 69813 [details]
Glitchy effects on the buttons of Steam Linux Big Picture
Comment 5 Eric Anholt 2012-11-13 22:16:19 UTC
Can you capture an apitrace of your glitches that reproduces them on demand?  world of goo seems like a good candidate for that (simple OpenGL, native linux binary).

Also, can you attach an lspci so we can see what exact snb you have?  We've seen some failures like this in GT1 hardware before when we've had mistakes in GT1 support, I think.  If it's not that, I'm not sure what it would be.
Comment 6 Jordan Justen 2013-01-26 09:01:50 UTC
(In reply to comment #5)
> Can you capture an apitrace of your glitches that reproduces them on demand?
> world of goo seems like a good candidate for that (simple OpenGL, native
> linux binary).

I was able to capture a trace of the Steam Big Picture issue:
http://people.freedesktop.org/~jljusten/steam-big-picture.trace
(The last frame in this slightly trimmed trace shows the issue)

Some debug notes thus far:
* Reproducable with 64-bit apitrace on HD3000
* Reproducable on 8.0/9.0/master branches
* Same trace renders fine on HD4000
Comment 7 Jordan Justen 2013-01-26 19:11:45 UTC
(In reply to comment #0)
> I also tried World of Goo (native binaries through the new Steam for Linux).
> At first everything seemed smooth and clear but when I returned to the main
> menu I only saw this:
> http://i.imgur.com/BPuMQ.png

I can easily produce similar behavior by pulling up the
steam overlay. (Press shift-tab in game.)

By playing normally, I was unable to reproduce the issue.
Do you think the issue might be related to the steam overlay?

Why does this matter? If the steam overlay is running, then
apitrace cannot be used.

I think this issue may be separate from the Big Picture issue.
In the case of the Big Picture issue, it does not occur
with HD4000, but the World of Goo steam overlay issue
does occur on HD4000.
Comment 8 Jordan Justen 2013-01-29 21:15:41 UTC
Created attachment 73874 [details]
A much smaller (trimmed) trace of the steam big picture issue
Comment 9 Kenneth Graunke 2013-02-02 11:46:20 UTC
The big picture issue should be fixed by this patch on the mailing list:
http://lists.freedesktop.org/archives/mesa-dev/2013-February/033987.html

(I expect there'll be a few revisions before it goes upstream.)
Comment 11 Kenneth Graunke 2013-02-03 21:45:36 UTC
I pushed those patches, so Big Picture Mode should work fine with Mesa master.  Assuming no regressions, we'll port those to 9.0.x.
Comment 12 Jordan Justen 2013-02-12 19:45:17 UTC
(In reply to comment #0)
> I also tried World of Goo (native binaries through the new Steam for Linux).
> At first everything seemed smooth and clear but when I returned to the main
> menu I only saw this:
> http://i.imgur.com/BPuMQ.png
> With Amnesia Dark Descent (Steam for Linux) everything seemed fine at first
> too, but when I advanced though the game, the graphics started to glitch
> like in the World of Goo.

I think these portions of the report have been resolved with
Valve's Feb 7, 2013 Steam update.

I guess this leave only the Wine portions of the report.
Comment 13 Andreas Boll 2013-02-21 15:34:45 UTC
Cherry-picked to the 9.0 branch: e11ef54a92843be70850ae0244169b5b9708ecab

It will be available in Mesa 9.0.3.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.